# distributed-static-site-generator-v1

./: Cargo.toml  README.md  deploy.sh  fluence.yaml  provider.yaml  tmp.txt
.fluence/: _docker-compose.yaml  provider-artifacts.yaml  provider-secrets.yaml  workers.yaml
.fluence/aqua/: deals.aqua  services.aqua
.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
.fluence/service-configs/: cioConsensus_Config.toml  cioIroh_Config.toml  cioKubo_Config.toml  cioPinata_Config.toml  cioSafe_Config.toml  cioSigner_Config.toml  cioVault_Config.toml  contentStore_Config.toml  dsgContent_Config.toml  dsgLeader_Config.toml  dsgRenderer_Config.toml  nPublication_Config.toml  safeServiceV2_Config.toml  safeService_Config.toml  tuContentStore_Config.toml  tuDsgContent_Config.toml  tuDsgRenderer_Config.toml  tuDsgWebHost_Config.toml
src/aqua/: constants.aqua  dsg_helpers.aqua  helpers.aqua  main.aqua  services.aqua  task.aqua  types.aqua  utils.aqua
src/compiled-aqua/: main.ts
src/services/: cioKubo  cioPinata  cioVault
src/services/dsgContent/modules/dsgContent/src/: main.rs
src/services/dsgRenderer/modules/dsgRenderer/src/: main.rs
src/services/nPublication/: service.yaml
src/services/nPublication/modules/cio-evm/: Cargo.toml  module.yaml
src/services/nPublication/modules/cio-evm/src/: abi.rs  eth.rs  filter.rs  main.rs  utils.rs
src/services/nPublication/modules/facade/: Cargo.toml
src/services/nPublication/modules/facade/src/: main.rs  request.rs
src/services/tuContentStore/: service.yaml
src/services/tuContentStore/modules/tuContentStore/: Cargo.toml
src/services/tuContentStore/modules/tuContentStore/src/: main.rs  query.rs
src/services/tuDsgContent/modules/tuDsgContent/: Cargo.toml
src/services/tuDsgContent/modules/tuDsgContent/src/: main.rs
src/services/tuDsgRenderer/modules/tuDsgRenderer/: Cargo.toml
src/services/tuDsgRenderer/modules/tuDsgRenderer/src/: main.rs
src/services/tuDsgTemplateData/modules/tuDsgTemplateData/: Cargo.toml
src/services/tuDsgTemplateData/modules/tuDsgTemplateData/src/: main.rs
src/services/tuDsgWebHost/: service.yaml
src/services/tuDsgWebHost/modules/tuDsgWebHost/: Cargo.toml
src/spells/content/: spell.aqua
src/spells/listener/: spell.aqua  spell.yaml
src/spells/renderer/: spell.aqua
src/spells/webHost/: spell.aqua
src/tuDsgTypes/: lib.rs
(+1 files in other folders)
