[workspace]
members = [
  "src/services/cioKubo/modules/cioKubo",
  "src/services/tuContentStore/modules/tuContentStore",
  "src/services/tuDsgRenderer/modules/tuDsgRenderer",
  "src/services/cioVault/cioVault",
  "src/services/tuDsgWebHost/modules/tuDsgWebHost",
  "src/services/cio-pinata/modules/cio-pinata",
  "src/services/nPublication/modules/facade",
  "src/services/nPublication/modules/cio-evm",
  "src/services/cioConsensus/cioConsensus",
  "src/services/dsgContent/modules/dsgContent"
]
